# iclr2026-ml4rs-tutorial

./: .gitignore  .pre-commit-config.yaml  1.0-agriculture-monitoring-with-ftw.ipynb  2.0-country-scale-field-boundary-predictions.ipynb  README.md  environment.yml  pyproject.toml  utils.py
.github/workflows/: ci.yml
